# automoto

./: .coverage  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LOCAL_TESTING.md  MANIFEST.yml  QUICKSTART.md  README.md  automoto.code-workspace  copilot-plugin.json  coverage.xml  es-metadata.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
knowledge-agent-poc/: .coverage  BOT_EMULATOR.md  CLEANUP_AND_ROADMAP_SUMMARY.md  CLEANUP_COMPLETE.md  MODERNIZATION_GUIDE.md  MODERNIZATION_SUMMARY.md  POC_IMPLEMENTATION.md  PROJECT_PROGRESS.md  QUICKSTART.md  QUICKSTART.sh  README.md  ROADMAP.md  ROADMAP_VISUAL_GUIDE.md  WEEK2_SUMMARY.md  WEEK2_TEST_INFRASTRUCTURE.md  WEEK3_DOCUMENT_INDEX.md  WEEK3_EVALUATION_SPEC.md  WEEK3_IMPLEMENTATION_ROADMAP.md  WEEK3_PHASE1_PLANNING.md  WEEK3_PLANNING_COMPLETE.md  WEEK3_PLANNING_SUMMARY.md  WEEK3_TECHNICAL_SPEC.md  alembic.ini  api_spec.yaml  docker-compose.yml  example_usage.py  examples_modern.py  fix_recursive_calls.py  fix_tests_phase_b.py  knowledge_agent.py  knowledge_agent_bot.py  main.py  poc_runner.py  pyproject.toml  pytest.ini  run_server.py  setup.ps1  setup_phase_e.sh  start_phase_e.sh  verify_phase_e.sh  (+1 more)
knowledge-agent-poc/agents/: __init__.py  modern_base_agent.py  modern_spec_agents.py
knowledge-agent-poc/alembic/: env.py
knowledge-agent-poc/analytics/: __init__.py  analytics_routes.py
knowledge-agent-poc/api/: __init__.py  artifacts_routes.py  auth_routes.py  dashboard_routes.py  evaluation_routes.py  events_routes.py  knowledge_routes.py  projects_routes.py  workflow_routes.py
knowledge-agent-poc/async_execution/: __init__.py  async_routes.py  celery_config.py
knowledge-agent-poc/bots/: bot_server.py
knowledge-agent-poc/compilation/: compiler.py
knowledge-agent-poc/config/: __init__.py  settings.py
knowledge-agent-poc/content/: Towards Secure Coding Agents with FlowGuard.html  flowguard.txt  spec.txt
knowledge-agent-poc/core/: event_models.py  event_repository.py  graph_models.py  knowledge_models.py  knowledge_repository.py  project_status.py  workflow_status.py
knowledge-agent-poc/docs/: BOT_INTEGRATION.md  M365_QUICKSTART.md  (+2 more)
(+404 files in other folders)
